--- a/templates/post/form_post.html.twig
+++ b/templates/post/form_post.html.twig
@@ -4,7 +4,12 @@
 
     <div class="row">
         <div class="col-12 mx-auto">
-            <h1 class="text-center">Ajouter un article</h1>
+            {% if post is defined %}
+                <h1 class="text-center">Modifier un article</h1>
+            {% else %}
+                <h1 class="text-center">Ajouter un article</h1>
+            {% endif %}
+
         </div>
     </div>
 
@@ -34,12 +39,23 @@
                 {{ form_row(form.photo) }}
             </div>
 
+            {% if post is defined %}
+                <button type="submit" class="d-block col-2 mx-auto btn btn-warning">Modifier</button>
+            {% else %}
+                <button type="submit" class="d-block col-2 mx-auto btn btn-success">Publier</button>
+            {% endif %}
+
 {# Nous allons plutôt déclarer le <button> dans le PostType #}
 {# <button type="submit">Publier</button>#}
 
             {{ form_end(form) }} {# </form> #}
-
         </div>
     </div>
+
+{#    {% if post.photo is not null %}#}
+{#    <div class="col-6">#}
+{#        <img src="{{ asset('uploads/') ~ post.photo }}" alt="" class="img-fluid">#}
+{#    </div>#}
+{#{% endif %}#}
 
 {% endblock %}
