--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -19,6 +19,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{{ path('show_dashboard') }}">Dashboard</a></li>
                         <li><a class="dropdown-item" href="{{ path('post_create_post') }}">Ajouter un article</a></li>
+                        <li><a class="dropdown-item" href="{{ path('create_category') }}">Ajouter une catégorie</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
@@ -27,3 +28,10 @@
         </div>
     </div>
 </nav>
+{# ----------------------- RENDER CATEGORIES ---------------------- #}
+<div class="bg-light">
+{#    {{ render(url('render_categories_in_nav')) }}#}
+
+    {#  Lorsque vous n'avez pas de route dans votre action et pas besoin d'arguments (dans le Controller)  #}
+    {{ render(controller('App\\Controller\\DefaultController::renderCategoriesInNav')) }}
+</div>
