--- a/templates/dashboard/show_dashboard.html.twig
+++ b/templates/dashboard/show_dashboard.html.twig
@@ -4,7 +4,7 @@
 
     <h2 class="text-center">Tableau de bord Administrateur</h2>
 
-    {{ dump(app.request.server) }}
+{#    {{ dump(app.request.server) }}#}
 
     <div class="row">
         <div class="col-12 mx-auto">
