--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,6 +18,10 @@
            value="{{ csrf_token('authenticate') }}"
     >
 
-    <button class="btn btn-lg btn-primary" type="submit">Se connecter</button>
+    <div class="row">
+        <a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
+
+    </div>
+    <button class="btn btn-lg btn-primary my-3" type="submit">Se connecter</button>
 </form>
 {% endblock %}
